地図表示完了

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,11 @@
     "outDir": "./dist",
     "rootDir": "./",
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "typeRoots": ["types", "node_modules/@types"],
+    "baseUrl": "./",
+    "paths": {
+      "yahoo": ["types/yahoo"]
+    },
   }
 }
