--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-redux": "^6.0.9",
     "@webpack-cli/init": "^0.1.2",
     "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
