--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "css-loader": "^1.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "postcss-icss-values": "^2.0.1",
-    "postcss-loader": "^3.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
+    "react-toolbox": "^2.0.0-beta.13",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.6",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.2.2",
     "tslint": "^5.11.0",
@@ -45,5 +45,8 @@
     "webpack": "^4.21.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
+  },
+  "dependencies": {
+    "node-sass": "^4.11.0"
   }
 }
