--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "webpack-dev-server --hot"
+    "serve": "webpack-dev-server --hot",
+    "serve:css": "tcm src --watch"
   },
   "repository": {
     "type": "git",
@@ -29,13 +30,13 @@
     "css-loader": "^1.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "postcss-modules-values": "^2.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-toolbox": "^2.0.0-beta.13",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.6",
-    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.2.2",
     "tslint": "^5.11.0",
@@ -46,7 +47,5 @@
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
   },
-  "dependencies": {
-    "node-sass": "^4.11.0"
-  }
+  "dependencies": {}
 }
